Fix Maven deprecation issue

--- a/caps-api/pom.xml
+++ b/caps-api/pom.xml
@@ -30,14 +30,14 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-trees</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <!-- Workaround for https://youtrack.jetbrains.com/issue/SCL-13184 -->
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-trees</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
