--- a/caps-cora/pom.xml
+++ b/caps-cora/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-logical</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <!-- Neo4j -->
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-ir</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -93,7 +93,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-trees</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
