--- a/caps-ir/pom.xml
+++ b/caps-ir/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-api</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <!-- Neo4j -->
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-api</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-trees</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
