--- a/caps-tck/pom.xml
+++ b/caps-tck/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-api</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-trees</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-ir</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-logical</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
