--- a/caps-logical/pom.xml
+++ b/caps-logical/pom.xml
@@ -23,13 +23,13 @@
     <dependency>
       <groupId>org.opencypher</groupId>
       <artifactId>caps-api</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.opencypher</groupId>
       <artifactId>caps-ir</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
 
     <!-- Tests -->
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.opencypher</groupId>
       <artifactId>caps-api</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -45,7 +45,7 @@
     <dependency>
       <groupId>org.opencypher</groupId>
       <artifactId>caps-ir</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -54,7 +54,7 @@
     <dependency>
       <groupId>org.opencypher</groupId>
       <artifactId>caps-trees</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
