--- a/caps-spark/pom.xml
+++ b/caps-spark/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-cora</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <!-- Spark -->
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-api</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-ir</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-cora</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>org.opencypher</groupId>
             <artifactId>caps-trees</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
