--- a/caps-cora/pom.xml
+++ b/caps-cora/pom.xml
@@ -98,6 +98,15 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Workaround for https://youtrack.jetbrains.com/issue/SCL-13184 -->
+        <dependency>
+            <groupId>org.opencypher</groupId>
+            <artifactId>caps-logical</artifactId>
+            <version>${project.parent.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
