Do not build shaded JAR by default

--- a/pom.xml
+++ b/pom.xml
@@ -342,11 +342,11 @@
         </profile>
 
         <profile>
-            <id>skipShade</id>
+            <id>buildShade</id>
             <activation>
                 <property>
-                    <name>skipShade</name>
-                    <value>!true</value>
+                    <name>buildShade</name>
+                    <value>true</value>
                 </property>
             </activation>
             <build>
