Disable TCK on COSC via scala-test plugin and Tags

--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,7 @@
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>WDF TestSuite.txt</filereports>
+          <tagsToExclude>TckCosc</tagsToExclude>
         </configuration>
         <executions>
           <execution>
