--- a/pom.xml
+++ b/pom.xml
@@ -46,22 +46,24 @@
 
     <!-- Used dependencies -->
     <dep.ammonite.version>1.0.1-6-6d2db3a</dep.ammonite.version>
-    <dep.bouncycastle.version>1.57</dep.bouncycastle.version>
     <dep.cats.version>0.9.0</dep.cats.version>
     <dep.circe.version>0.8.0</dep.circe.version>
     <dep.eff.version>4.5.0</dep.eff.version>
     <dep.hadoop.version>2.7.0</dep.hadoop.version>
-    <dep.junit.version>5.0.2</dep.junit.version>
-    <dep.junit.platform.version>1.0.2</dep.junit.platform.version>
-    <dep.junit.vintage.version>4.12.2</dep.junit.vintage.version>
-    <dep.mockito.version>1.10.19</dep.mockito.version>
     <dep.multiset.version>0.4</dep.multiset.version>
     <dep.neo4j.version>3.4.0-alpha05</dep.neo4j.version>
     <dep.netty.version>4.1.8.Final</dep.netty.version>
     <dep.neo4j.driver.version>1.4.2</dep.neo4j.driver.version>
-    <dep.scalatest.version>3.0.4</dep.scalatest.version>
     <dep.sourcecode.version>0.1.2</dep.sourcecode.version>
     <dep.spark.version>2.2.0</dep.spark.version>
+
+    <!-- Test scope dependencies -->
+    <dep.bouncycastle.version>1.57</dep.bouncycastle.version>
+    <dep.junit.version>5.0.2</dep.junit.version>
+    <dep.junit.platform.version>1.0.2</dep.junit.platform.version>
+    <dep.junit.vintage.version>4.12.2</dep.junit.vintage.version>
+    <dep.mockito.version>1.10.19</dep.mockito.version>
+    <dep.scalatest.version>3.0.4</dep.scalatest.version>
   </properties>
 
   <repositories>
