Add caps-examples module and fixed netty dependency

--- a/caps-spark/pom.xml
+++ b/caps-spark/pom.xml
@@ -44,6 +44,12 @@
       <version>${dep.spark.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>${dep.netty.version}</version>
+    </dependency>
+
     <!-- Test -->
 
     <dependency>
