--- a/okapi-api/pom.xml
+++ b/okapi-api/pom.xml
@@ -6,7 +6,7 @@
 
   <parent>
     <groupId>org.opencypher</groupId>
-    <artifactId>cypher-for-apache-spark</artifactId>
+    <artifactId>okapi</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
