--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.opencypher</groupId>
-  <artifactId>cypher-for-apache-spark</artifactId>
+  <artifactId>okapi</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>Cypher for Apache Spark</name>
+  <name>Okapi - openCypher query compilation API and pipeline</name>
 
   <modules>
     <module>okapi-api</module>
