--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,7 @@
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>WDF TestSuite.txt</filereports>
-          <tagsToExclude>TckCosc</tagsToExclude>
+          <tagsToExclude>CAPSPatternGraphFactory</tagsToExclude>
         </configuration>
         <executions>
           <execution>
