Separate dependency on neo4j-harness and openCypher-frontend
There were issues with neo4j-harness on the latest alpha, and
we don't need bleeding-edge for the neo4j-harness. Since these
now come from different minor releases of Neo4j, there won't
be any conflict on the classpath.

This also removes the unused exception creator fields from some
of our rewriters.

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
     <dep.junit.platform.version>1.0.2</dep.junit.platform.version>
     <dep.junit.vintage.version>4.12.2</dep.junit.vintage.version>
     <dep.mockito.version>1.10.19</dep.mockito.version>
+    <dep.neo4j.harness.version>3.3.3</dep.neo4j.harness.version>
     <dep.scalatest.version>3.0.4</dep.scalatest.version>
   </properties>
 
@@ -481,7 +482,7 @@
     <dependency>
       <groupId>org.neo4j.test</groupId>
       <artifactId>neo4j-harness</artifactId>
-      <version>${dep.neo4j.version}</version>
+      <version>${dep.neo4j.harness.version}</version>
       <scope>test</scope>
     </dependency>
 
