--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,8 @@
     <dep.junit.vintage.version>4.12.2</dep.junit.vintage.version>
     <dep.mockito.version>1.10.19</dep.mockito.version>
     <dep.neo4j.harness.version>3.3.3</dep.neo4j.harness.version>
-    <dep.scalatest.version>3.0.4</dep.scalatest.version>
+    <dep.scalatest.version>3.0.5</dep.scalatest.version>
+    <dep.scalacheck.version>1.13.5</dep.scalacheck.version>
   </properties>
 
   <repositories>
@@ -514,6 +515,13 @@
           <artifactId>scala-library</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>org.scalacheck</groupId>
+      <artifactId>scalacheck_${project.scala.binary.version}</artifactId>
+      <version>${dep.scalacheck.version}</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
