--- a/okapi-ir/pom.xml
+++ b/okapi-ir/pom.xml
@@ -30,7 +30,7 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>openCypher-frontend-1</artifactId>
-      <version>${dep.neo4j.version}</version>
+      <version>${dep.neo4j.frontend.version}</version>
     </dependency>
 
     <!-- Utils -->
