--- a/spark-cypher-tck/pom.xml
+++ b/spark-cypher-tck/pom.xml
@@ -19,6 +19,22 @@
     <dep.tck.version>1.0.0-M08</dep.tck.version>
   </properties>
 
+  <build>
+    <plugins>
+      <!-- Disable license listing plugin -->
+      <plugin>
+        <groupId>org.neo4j.build.plugins</groupId>
+        <artifactId>licensing-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>list-all-licenses</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
 
     <!-- Test -->
