Replace profiles with cluster/standalone
Co-Authored-By: Max Kießling <max.kiessling@neotechnology.com>

--- a/spark-cypher/pom.xml
+++ b/spark-cypher/pom.xml
@@ -30,18 +30,21 @@
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_${project.scala.binary.version}</artifactId>
       <version>${dep.spark.version}</version>
+      <scope>${dep.spark.scope}</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_${project.scala.binary.version}</artifactId>
       <version>${dep.spark.version}</version>
+      <scope>${dep.spark.scope}</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-catalyst_${project.scala.binary.version}</artifactId>
       <version>${dep.spark.version}</version>
+      <scope>${dep.spark.scope}</scope>
     </dependency>
 
     <!-- Test -->
