--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
     <project.scala.binary.version>2.11</project.scala.binary.version>
     <project.scala.version>${project.scala.binary.version}.12</project.scala.version>
     <project.rootdir>${project.basedir}</project.rootdir>
+    <project.artifact.classifier>standalone</project.artifact.classifier>
 
     <!-- Used plugins -->
     <plugin.exec-maven.version>1.4.0</plugin.exec-maven.version>
@@ -86,6 +87,7 @@
     <dep.netty.version>4.1.8.Final</dep.netty.version>
     <dep.neo4j.driver.version>1.4.2</dep.neo4j.driver.version>
     <dep.spark.version>2.2.0</dep.spark.version>
+    <dep.spark.scope>compile</dep.spark.scope>
 
     <!-- Test scope dependencies -->
     <dep.bouncycastle.version>1.57</dep.bouncycastle.version>
@@ -399,34 +401,23 @@
     </profile>
 
     <profile>
-      <id>databricks</id>
-      <properties>
-        <dep.spark.version>2.2.0</dep.spark.version>
-      </properties>
-    </profile>
-
-    <profile>
-      <id>cloudera</id>
-      <repositories>
-        <repository>
-          <id>cloudera</id>
-          <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
-        </repository>
-      </repositories>
-
-      <properties>
-        <dep.spark.version>2.2.0.cloudera1</dep.spark.version>
-      </properties>
-    </profile>
-
-    <profile>
-      <id>buildShade</id>
       <activation>
-        <property>
-          <name>buildShade</name>
-          <value>true</value>
-        </property>
+        <activeByDefault>true</activeByDefault>
       </activation>
+      <id>standalone</id>
+      <properties>
+        <project.artifact.classifier>standalone</project.artifact.classifier>
+        <dep.spark.scope>compile</dep.spark.scope>
+        <buildShade>true</buildShade>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>cluster</id>
+      <properties>
+        <project.artifact.classifier>cluster</project.artifact.classifier>
+        <dep.spark.scope>provided</dep.spark.scope>
+      </properties>
       <build>
         <plugins>
           <!-- shade plugin -->
@@ -443,7 +434,7 @@
                 </goals>
                 <configuration>
                   <shadedArtifactAttached>true</shadedArtifactAttached>
-                  <shadedClassifierName>standalone-shell</shadedClassifierName>
+                  <shadedClassifierName>${project.artifact.classifier}</shadedClassifierName>
                   <createDependencyReducedPom>true</createDependencyReducedPom>
                   <artifactSet>
                     <excludes>
@@ -527,6 +518,7 @@
         </plugins>
       </build>
     </profile>
+
   </profiles>
 
   <dependencies>
