--- a/pom.xml
+++ b/pom.xml
@@ -376,6 +376,10 @@
             <groupId>org.neo4j.build.plugins</groupId>
             <artifactId>licensing-maven-plugin</artifactId>
           </plugin>
+          <plugin>
+            <groupId>com.mycila</groupId>
+            <artifactId>license-maven-plugin</artifactId>
+          </plugin>
         </plugins>
       </build>
     </profile>
