--- a/spark-cypher-tck/pom.xml
+++ b/spark-cypher-tck/pom.xml
@@ -84,6 +84,14 @@
       <version>${dep.tck.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.opencypher</groupId>
+      <artifactId>okapi-testing</artifactId>
+      <version>${project.parent.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
