--- a/okapi-testing/pom.xml
+++ b/okapi-testing/pom.xml
@@ -26,6 +26,13 @@
       <version>${project.parent.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.opencypher</groupId>
+      <artifactId>okapi-api</artifactId>
+      <version>${project.parent.version}</version>
+      <type>test-jar</type>
+    </dependency>
+
     <!-- Neo4j -->
     <dependency>
       <groupId>org.neo4j</groupId>
