--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ scala:
 
 env:
   matrix:
-    - COMMAND=compile -Dcluster
-    - COMMAND=test
+    - PROFILE=test
+    - PROFILE=check
 
-script: "mvn clean ${COMMAND}"
+script:
+  - if [ "$PROFILE" = "test" ]; then mvn clean test; fi
+  - if [ "$PROFILE" = "check" ]; then mvn clean compile -Dcluster; fi
