--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ env:
     - PROFILE=test
     - PROFILE=check
 
-install: true
+install: echo "skip preparatory install"
 
 script:
   - if [ "$PROFILE" = "test" ]; then mvn clean test; fi
-  - if [ "$PROFILE" = "check" ]; then mvn clean compile -Dcluster; fi
+  - if [ "$PROFILE" = "check" ]; then mvn clean install -Dcluster -DskipTests; fi
