--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ env:
 install: echo "skip preparatory install"
 
 script:
-  - if [ "$PROFILE" = "test" ]; then mvn clean test; fi
-  - if [ "$PROFILE" = "check" ]; then mvn clean install -Dcluster -DskipTests; fi
+  - if [ "$PROFILE" = "test" ]; then mvn -q clean test; fi
+  - if [ "$PROFILE" = "check" ]; then mvn -q clean install -Dcluster -DskipTests; fi
