--- a/pom.xml
+++ b/pom.xml
@@ -341,6 +341,8 @@
           <junitxml>.</junitxml>
           <filereports>WDF TestSuite.txt</filereports>
           <tagsToExclude>CAPSPatternGraphFactory</tagsToExclude>
+          <!-- Enable full exception stack traces -->
+          <stdout>F</stdout>
         </configuration>
         <executions>
           <execution>
