--- a/okapi-tck/pom.xml
+++ b/okapi-tck/pom.xml
@@ -27,20 +27,17 @@
       <version>${dep.tck.version}</version>
     </dependency>
 
-    <!--<dependency>-->
-      <!--<groupId>org.opencypher</groupId>-->
-      <!--<artifactId>okapi-api</artifactId>-->
-      <!--<version>${project.parent.version}</version>-->
-      <!--<type>test-jar</type>-->
-      <!--<scope>test</scope>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-      <!--<groupId>org.opencypher</groupId>-->
-      <!--<artifactId>okapi-ir</artifactId>-->
-      <!--<version>${project.parent.version}</version>-->
-      <!--<scope>test</scope>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest_${project.scala.binary.version}</artifactId>
+      <version>${dep.scalatest.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.scala-lang</groupId>
+          <artifactId>scala-library</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
 
     <dependency>
       <groupId>org.opencypher</groupId>
