--- a/pom.xml
+++ b/pom.xml
@@ -539,5 +539,28 @@
       <artifactId>scala-compiler</artifactId>
       <version>${project.scala.version}</version>
     </dependency>
+
+
+    <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest_${project.scala.binary.version}</artifactId>
+      <version>${dep.scalatest.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-runner</artifactId>
+      <version>${dep.junit.platform.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.scalacheck</groupId>
+      <artifactId>scalacheck_${project.scala.binary.version}</artifactId>
+      <version>${dep.scalacheck.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
