Update license listings
- add Mozilla license as liked
- add dual CDDL + GPL 2

Co-Authored-By: Mats Rydberg <mats@neotechnology.com>

--- a/okapi-api/pom.xml
+++ b/okapi-api/pom.xml
@@ -41,7 +41,7 @@
       <scope>test</scope>
     </dependency>
 
-    <!--Workarounds-->
+    <!--Workarounds for https://youtrack.jetbrains.com/issue/SCL-13184-->
 
     <dependency>
       <groupId>org.opencypher</groupId>
