Disable Travis.CI test build

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ scala:
 
 env:
   matrix:
-    - PROFILE=test
     - PROFILE=check
+    #- PROFILE=test
 
 install: echo "skip preparatory install"
 
