--- a/pom.xml
+++ b/pom.xml
@@ -70,8 +70,9 @@
     <dep.hadoop.version>2.7.0</dep.hadoop.version>
     <dep.neo4j.version>3.4.0-SNAPSHOT</dep.neo4j.version>
     <dep.netty.version>4.1.8.Final</dep.netty.version>
+    <dep.netty.version>4.1.8.Final</dep.netty.version>
     <dep.neo4j.driver.version>1.4.2</dep.neo4j.driver.version>
-    <dep.opencypher.front-end.version>1.0.0-SNAPSHOT</dep.opencypher.front-end.version>
+    <dep.opencypher.front-end.version>2.0.0</dep.opencypher.front-end.version>
     <dep.spark.version>2.2.1</dep.spark.version>
     <dep.spark.scope>compile</dep.spark.scope>
 
