Update version for neo4j dependencies to 3.4.0

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
     <dep.circe.version>0.9.1</dep.circe.version>
     <dep.eff.version>5.0.0</dep.eff.version>
     <dep.hadoop.version>2.7.0</dep.hadoop.version>
-    <dep.neo4j.version>3.4.0-SNAPSHOT</dep.neo4j.version>
+    <dep.neo4j.version>3.4.0</dep.neo4j.version>
     <dep.netty.version>4.1.8.Final</dep.netty.version>
     <dep.netty.version>4.1.8.Final</dep.netty.version>
     <dep.neo4j.driver.version>1.4.2</dep.neo4j.driver.version>
