--- a/pom.xml
+++ b/pom.xml
@@ -346,32 +346,6 @@
 
   <profiles>
 
-    <!-- Only run license checking if there is a src/main/scala directory -->
-    <profile>
-      <id>has-sources</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-        <file>
-          <exists>src/main/scala</exists>
-        </file>
-        <property>
-          <name>cluster</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.neo4j.build.plugins</groupId>
-            <artifactId>licensing-maven-plugin</artifactId>
-          </plugin>
-          <plugin>
-            <groupId>com.mycila</groupId>
-            <artifactId>license-maven-plugin</artifactId>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
     <profile>
       <activation>
         <activeByDefault>true</activeByDefault>
@@ -409,7 +383,7 @@
         </property>
       </activation>
 
-      <!-- We're skipping TCK and examples -->
+      <!-- We're skipping Spark testing, TCK and examples -->
       <modules>
         <module>licensecheck-config</module>
         <module>okapi-api</module>
@@ -423,6 +397,17 @@
 
       <build>
         <plugins>
+          <!-- Licensing plugins-->
+          <plugin>
+            <groupId>org.neo4j.build.plugins</groupId>
+            <artifactId>licensing-maven-plugin</artifactId>
+          </plugin>
+
+          <plugin>
+            <groupId>com.mycila</groupId>
+            <artifactId>license-maven-plugin</artifactId>
+          </plugin>
+
           <!-- shade plugin -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
