--- a/spark-cypher-testing/pom.xml
+++ b/spark-cypher-testing/pom.xml
@@ -19,6 +19,7 @@
   </properties>
 
   <dependencies>
+    <!-- OKAPI -->
     <dependency>
       <groupId>org.opencypher</groupId>
       <artifactId>spark-cypher</artifactId>
@@ -31,6 +32,29 @@
       <version>${project.parent.version}</version>
     </dependency>
 
+    <!-- Spark -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_${project.scala.binary.version}</artifactId>
+      <version>${dep.spark.version}</version>
+      <scope>${dep.spark.scope}</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_${project.scala.binary.version}</artifactId>
+      <version>${dep.spark.version}</version>
+      <scope>${dep.spark.scope}</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-catalyst_${project.scala.binary.version}</artifactId>
+      <version>${dep.spark.version}</version>
+      <scope>${dep.spark.scope}</scope>
+    </dependency>
+
+    <!-- Testing -->
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${project.scala.binary.version}</artifactId>
