--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
     <dep.neo4j.harness.version>3.3.3</dep.neo4j.harness.version>
     <dep.scalatest.version>3.0.5</dep.scalatest.version>
     <dep.scalacheck.version>1.13.5</dep.scalacheck.version>
+    <dep.spark-measure.version>0.11</dep.spark-measure.version>
   </properties>
 
   <build>
