(De-)serialize SchemaImpl with uPickle
Co-Authored-By: Max Kießling <max.kiessling@neotechnology.com>
Co-Authored-By: Philip Stutz <philip.stutz@gmail.com>

--- a/okapi-api/pom.xml
+++ b/okapi-api/pom.xml
@@ -32,6 +32,15 @@
       <version>${project.parent.version}</version>
     </dependency>
 
+    <!-- Util -->
+
+    <!-- Json serialization -->
+    <dependency>
+      <groupId>com.lihaoyi</groupId>
+      <artifactId>upickle_${project.scala.binary.version}</artifactId>
+      <version>${dep.upickle.version}</version>
+    </dependency>
+
     <!--Tests-->
 
     <dependency>
