--- a/pom.xml
+++ b/pom.xml
@@ -387,10 +387,10 @@
       <build>
         <plugins>
           <!-- License file checking-->
-          <!--<plugin>-->
-            <!--<groupId>org.neo4j.build.plugins</groupId>-->
-            <!--<artifactId>licensing-maven-plugin</artifactId>-->
-          <!--</plugin>-->
+          <plugin>
+            <groupId>org.neo4j.build.plugins</groupId>
+            <artifactId>licensing-maven-plugin</artifactId>
+          </plugin>
 
           <!-- License header checking -->
           <plugin>
